--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "meal-catalogue",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.13.1"
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
